# osmium

./: .dockerignore  .env.cutover.example  .env.example  .env.prod.example  .gitignore  ARCH.md  Cargo.toml  Dockerfile  FILE_STORAGE_SETUP.md  README.md  cookies.txt  docker-compose.migration-test.yml  docker-compose.prod.yml  docker-compose.yml  flake.nix  resource-action-permission-model.md
.github/workflows/: audit.yml  ci.yml  dev-image.yml  docker-publish.yml  release.yml
Bruno/: opencollection.yml
Bruno/Admin/: ACL.yml  Access Catalog.yml  Access.yml  Get User Access.yml  Set Controller Status.yml
Bruno/Auth/: Get Session.yml  Login As (DEV).yml  Logout.yml  VATSIM Callback.yml  VATSIM Login.yml
Bruno/Dev/: Seed Dev Data.yml
Bruno/Events/: Assign Event Position.yml  Create Event Position.yml  Create Event.yml  Delete Event Position.yml  Delete Event.yml  Get Event.yml  List Event Positions.yml  List Events.yml  Publish Event Positions.yml  Update Event.yml
Bruno/Feedback/: Create Feedback.yml  Decide Feedback.yml  List Feedback.yml
Bruno/Files/: CDN Download File.yml  Delete File.yml  (+8 more)
docs/: api.html  index.md  route-permissions.md
migrations/: 0001_extensions_and_schemas.sql  0002_identity.sql  0003_access.sql  0004_org.sql  0005_training_core.sql  0006_training_curriculum.sql  0007_events.sql  0008_feedback.sql  0009_stats.sql  0010_media.sql  0011_integration.sql  0012_web.sql  0013_seed_reference_data.sql  0014_seed_roles_permissions.sql  0015_views_and_indexes.sql  0016_resource_action_permissions.sql  0017_stats_rework.sql  0018_audit_read_permission.sql  0019_default_user_read_mostly.sql  0020_visitor_applications_and_roster_parity.sql  0021_publications.sql  0022_access_web_scope.sql  0023_server_admin_role.sql  0024_training_permissions_split.sql  0025_ots_recommendation_uniqueness.sql  0026_unique_operating_initials.sql  0027_hierarchical_permissions.sql  0028_route_permission_split.sql  0029_api_keys.sql  0030_vatusa_refresh_permissions.sql  0031_email_platform.sql  0032_email_reply_to_override.sql  0033_training_additional_trainers.sql  0034_statistics_prefixes_permissions.sql  0035_broadcast_permissions.sql  0036_welcome_message_permissions.sql  0037_email_branding.sql  20260329120000_init.sql  20260330170000_phase1_acl_access.sql  20260330180000_phase1_2_user_profile_expansion.sql  (+11 more)
specs/: 001-pagination-consolidation.md  002-repo-layer-migration.md  003-model-dto-row-separation.md  004-structural-permission-enforcement.md  005-api-error-taxonomy.md  006-email-template-consolidation.md  007-background-jobs-abstraction.md  008-structural-housekeeping.md  009-final-handler-layering-cleanup.md  010-ip-rate-limiting.md  011-ip-request-tracking.md  012-feature-parity-roadmap.md  013-customizable-email-branding.md
src/: captcha.rs  config.rs  docs.rs  errors.rs  lib.rs  logging.rs  main.rs  router.rs  state.rs  time.rs
tests/: api_keys.rs  auth_sessions.rs  files_and_publications.rs  permission_gates.rs  routes_and_openapi.rs  training_or_events.rs
tools/api-load-tester/: Cargo.toml  README.md
tools/api-load-tester/src/: auth.rs  cli.rs  config.rs  http.rs  load.rs  main.rs  openapi.rs  personas.rs  report.rs  scenarios.rs  sweep.rs
tools/db-migrator/: Cargo.toml
tools/db-migrator/src/: cli.rs  config.rs  helpers.rs  main.rs  report.rs  state.rs  verify.rs
tools/db-migrator/src/domains/: events.rs  feedback.rs  mod.rs  org.rs  reference.rs  stats.rs  training.rs  users.rs
tools/db-migrator/src/mapping/: mod.rs
tools/db-migrator/src/source/: mod.rs
(+419 files in other folders)
