[package]
name = "osmium"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
dotenvy = "0.15.7"
http = "1.3.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "migrate", "chrono"] }
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
sha2 = "0.11.0"
hmac = "0.12.1"
aes-gcm = "0.10.3"
getrandom = "0.4.2"
pulldown-cmark = "0.12.2"
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
