[package]
name = "api-load-tester"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive", "env"] }
futures = "0.3.31"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "cookies"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "fs", "time"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
